--- a/test/Microsoft.TestCommon/Microsoft.TestCommon.csproj
+++ b/test/Microsoft.TestCommon/Microsoft.TestCommon.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory),Runtime.sln))\tools\WebStack.settings.targets" />
   <PropertyGroup>
-    <TargetFrameworks>net452;net462;netcoreapp2.1</TargetFrameworks>
+    <TargetFrameworks>net462;netcoreapp2.1</TargetFrameworks>
     <Configurations>$(Configurations);CodeAnalysis</Configurations>
     <DefineConstants
         Condition=" '$(NetFX_Core)' == 'true' ">$(DefineConstants);NETFX_CORE</DefineConstants>
@@ -14,15 +14,20 @@
   <ItemGroup>
     <None Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
 
-    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <!-- NetCore project brings in System.Net.Http from .NET Standard but doesn't expose that to us here. -->
+    <PackageReference Include="System.Net.Http" Version="4.3.4"
+        Condition=" '$(TargetFrameworkIdentifier)' == '.NETFramework' AND '$(NetFX_Core)' == 'true' " />
+    <Reference Include="System.Net.Http"
+        Condition=" '$(TargetFrameworkIdentifier)' == '.NETFramework' AND '$(NetFX_Core)' != 'true' " />
+
     <Reference Include="System.Web"
         Condition=" '$(TargetFrameworkIdentifier)' == '.NETFramework' " />
 
-    <PackageReference Include="Moq" Version="4.7.142.0" />
-    <PackageReference Include="xunit.abstractions" Version="2.0.1" />
-    <PackageReference Include="xunit.assert" Version="2.3.0" />
-    <PackageReference Include="xunit.extensibility.core" Version="2.3.0" />
-    <PackageReference Include="xunit.extensibility.execution" Version="2.3.0" />
+    <PackageReference Include="Moq" Version="4.18.4" />
+    <PackageReference Include="xunit.abstractions" Version="2.0.3" />
+    <PackageReference Include="xunit.assert" Version="2.4.2" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.4.2" />
+    <PackageReference Include="xunit.extensibility.execution" Version="2.4.2" />
 
     <Compile Remove="AppDomainUtils.cs;Microsoft\TestCommon\RuntimeEnvironment.cs;WebUtils.cs"
         Condition=" '$(TargetFrameworkIdentifier)' != '.NETFramework' " />
