Address a few more nits - avoid repeated NuGet.exe downloads   - remove extra bits in modern file versions before parsing - suppress warnings about targeting `netcoreapp2.1`

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,5 +9,8 @@
       analyzers, which run during build. Refer to https://aka.ms/fxcopanalyzers to migrate to FxCop analyzers."
     -->
     <SuppressLegacyCodeAnalysisDeprecatedWarning>true</SuppressLegacyCodeAnalysisDeprecatedWarning>
+    <!-- Workaround continued use of netcoreapp2.1; suppress the NETSDK1138 warning. -->
+    <CheckEolTargetFramework>false</CheckEolTargetFramework>
   </PropertyGroup>
+
 </Project>
