Use latest 2.1.x .NET SDK - noticed CI builds were using old 2.1.500   - `UseDotNet@2` seems to ignore `rollForward` when using global.json :frown: - nits:   - quiet `dotnet` in CI (where `dotnet` is always new)   - complain about all potentially missing components when VS isn't found   - add a missing blank line

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,8 @@ parameters:
 variables:
 - name: DOTNET_CLI_TELEMETRY_OPTOUT
   value: 1
+- name: DOTNET_NOLOGO
+  value: 1
   # Run CodeQL3000 tasks in a separate internal pipeline; not needed here.
 - name: Codeql.SkipTaskAutoInjection
   value: true
